..F....... [ZBXNEXT-583] added the maintenance filter to the trigger status page (Pavels)
A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the maintenance.get method (Pavels)
..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)

Bug fixes:
..F....... [ZBX-5513] fixed http authentication without directly passing password (Eduard)
..F....PS. [ZBX-4852] fixed calculation of update interval if flexible intervals are used (Andris, Sasha)
A......... [ZBX-5434] fixed linking template items to host validation (Eduard)
..F....... [ZBX-5514] fixed sql query in get_min_itemclock_by_itemid function (Eduard)
A......... [ZBX-5510] fixed item name selecting using group filter (Eduard)
..F....... [ZBX-2939] fixed login button link in http auth mode (Eduard)
..F....... [ZBX-5406] fixed error when export template with another template with screens linked to it (Vedmak)
....I..... [ZBX-5509] fixed upgrade patch to execute it on MySQL 5.0.28 or earlier (Sasha)
...G...PS. [ZBX-5383] maximum data size accepted via Zabbix communication protocol is limited to 128 MB (Andris)
..F....... [ZBX-5198] fixed usage of 'memory_get_peak_usage' function appeared in PHP5.2 (Vedmak)
..F....... [ZBX-5466] fixed dependency adding when copying triggers to host and when full cloning host (Toms)
..F....... [ZBX-5466] removed that triggers with HTTP items not copied when copying triggers to hosts (Toms)
A......... [ZBX-5466] improved warning message for trigger circular dependencies (Toms)
A......... [ZBX-5466] fixed warning message which missed template name, when linking template to a host, when there were dependencies from that template to other template which were not linked to that host (Toms)
A.F....... [ZBX-4316] improved message for web step status code validation error, added validation in api (Vedmak)
..F....... [ZBX-5445] fixed hint not removed in dashboard when widget content is refreshed (Vedmak)